--- a/account.html
+++ b/account.html
@@ -1,1 +1,292 @@
-<html></html>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <title>Account - KACAANG</title>
+
+    <!-- Media Queries/Viewport -->
+    <meta name="viewport" content="width-device-width, initial-scale=1">
+
+    <!--Bootstrap-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+        crossorigin="anonymous"></script>
+
+    <!--css-->
+    <link rel="stylesheet" href="css/styles.css">
+
+    <!--favicon-->
+    <link rel="icon" type="image/x-icon" href="images/favicon.ico">
+
+    <!--fonts used Titan One & Comfortaa-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@400;500;700&family=Titan+One&display=swap"
+        rel="stylesheet">
+
+    <!--AWESOME FONT-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+        integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+    <!-- other language -->
+    <meta charset="utf-8">
+
+
+    <!--javascript-->
+    <script src="scripts/accountTabs.js"></script>
+
+</head>
+
+<body>
+    <!--banner-->
+    <div class="banner">
+        <div class="banner">
+            <img src="images/nav-banner.png" style="width: 100%; vertical-align: top;">
+        </div>
+        <div class="nav-banner">
+            <div class="centered">
+                <a href="index.html"><img src="images/logo.png"></a>
+            </div>
+        </div> 
+    </div>
+    <!--web nav bar-->
+  <div class="web-nav-bar">
+    <div class="row-nav-bar">
+        <div class="row">
+            <div class="nav col-md-10">
+                <a class="nav-links" href="about-us.html">About Us</a>
+                <div class="drop-down">
+                    <a id="shop-link" href="shop.html"></a><button class="btn dropdown-toggle nav-links" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        Shop
+                    </button></a>
+                    <div class="dropdown-content">
+                        <a class="dropdown-item" href="shop.html" style="margin-top: 10px;">All Products</a>
+                        <a class="dropdown-item" href="shop.html#sales" style="margin-top: 10px;">On Sale</a>
+                        <a class="dropdown-item" href="corporate.html" style="margin-top: 10px; margin-bottom: 10px;">Corporate Orders</a>
+                    </div>
+                </div>
+                <a class="nav-links" href="find-us.html">Find Us</a>
+                <a class="nav-links" href="contact-us.html">Contact Us</a>
+                <a class="nav-links" href="faqs.html">FAQs</a>
+                <a class="nav-links" href="reviews.html">Reviews</a>  
+            </div>
+            <div class="col-md-1 offset-md-1 nav-icon">
+                <a href="account.html" style="margin-right: 15px;"><i class="nav-icon fa-regular fa-user"></i></a>
+                <a href="cart.html"><i class="nav-icon fa-solid fa-cart-shopping"></i></a>
+            </div>
+        </div>
+    </div>
+    <div style="background-color: #3A2817; height: 10px; width: 100%;"></div>
+</div> 
+<!--mobile nav bar-->
+<div class="mobile-nav-bar">
+    <a class="btn btn-primary" data-bs-toggle="collapse" href="#dropdown-content" role="button" aria-expanded="false" aria-controls="collapseExample">
+        <i class="fa-solid fa-bars"></i>
+    </a>
+    <a class="nav-links" href="account.html" style="margin-left: 60%;"><i class="fa-regular fa-user"></i></a>
+    <a class="nav-links" href="cart.html"><i class="fa-solid fa-cart-shopping" style="margin-left: 60%;"></i></a>
+    <div class="collapse" id="dropdown-content">
+        <div class="card card-body">
+            <div class="accordion-body">
+                <a class="nav-links" href="about-us.html">About Us</a> <br>
+                <a class="nav-links" href="shop.html">Shop</a><br>
+                <a class="nav-links" href="find-us.html">Find Us</a><br>
+                <a class="nav-links" href="contact-us.html">Contact Us</a><br>
+                <a class="nav-links" href="faqs.html">FAQs</a><br>
+                <a class="nav-links" href="reviews.html">Reviews</a>
+            </div>
+        </div>
+    </div> 
+    <div style="background-color: #3A2817; height: 10px; width: 100%;"></div>
+</div>
+
+    <div class="page-20-percent">
+
+        <div class="bannerclass text-center">
+            <h1>Account</h1>
+        </div>
+
+        <!--content-->
+        <div class="container">
+            <div class="row profile">
+                <div class="col-md-3">
+                    <img src="images/profile.png">
+                </div>
+                <div class="col-md-5">
+                    <h6>Lica</h6>
+                    <h6 class="light-brown-font">licaloveskacaang@email.com</h6>
+                    <h3>
+                        150
+                        <img src="images/membership.png">
+                        <span class="h5">Points</span>
+                    </h3>
+                    <h6 class="light-brown-font">Referral code: KAC928HB28</h6>
+                </div>
+                <div class="col-md-2"></div>
+                <div class="col-md-2 d-flex align-items-end justify-content-end mt-3 mt-md-0">
+                    <i class="fa-regular fa-circle-user"></i>
+                        <p><u>Log Out</u></p>
+                </div>
+            </div>
+        </div>
+        <div>
+            <div class="tabacct">
+                <button class="tablinks" onclick="openTab(event, 'profile')" id="defaultOpen">Profile</button>
+                <button class="tablinks" onclick="openTab(event, 'pastorders')">Past Orders</button>
+                <button class="tablinks" onclick="openTab(event, 'rewards')">Rewards</button>
+                <button class="tablinks" onclick="openTab(event, 'pointshistory')">Points History</button>
+            </div>
+            <!-- tab contents -->
+            <!-- profile tab -->
+            <div id="profile" class="tabacctcontent">
+                <div class="acctrect-left">
+                    <div class="row">
+                        <div class="col-md-6">
+                            <h6>Name</h6>
+                            <p>Lica</p>
+                            <h6>Email</h6>
+                            <p>licaloveskacaang@email.com</p>
+                            <button class="actionbutton">Edit</button>
+                        </div>
+                        <div class="col-md-6">
+                            <h6>Address</h6>
+                            <p>
+                                Blk 655 Bukit Panjang Ring Road<br>
+                                #14-76<br>
+                                Singapore 687655<br>
+                                Singapore
+                            </p>
+                            <button class="actionbutton">View other addresses</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- past orders tab -->
+            <div id="pastorders" class="tabacctcontent">
+                <div class="acctrect">
+                    <h6>You haven't placed any orders yet.</h6> <br>
+                    <button class="actionbutton"><a href="shop.html" class="contact-link-no-underline">Shop
+                            Now</a></button>
+                </div>
+            </div>
+            <!-- rewards tab -->
+            <div id="rewards" class="tabacctcontent">
+                <div class="acctrect">
+                    <div class="row text-center">
+                        <div class="col-md-3 col-sm-6 col-6 reedemable">
+                            <img class="imgacct" src="images/free-delivery.png">
+                            <h6>Free Delivery</h6>
+                            <p>150 points</p>
+                            <button class="actionbutton">Redeem</button>
+                        </div>
+                        <div class="col-md-3 col-sm-6 col-6 unreedemable">
+                            <img class="imgacct" src="images/two-dollars-off.png">
+                            <h6>$2 OFF</h6>
+                            <p>350 points</p>
+                            <button class="actionbutton">More points needed</button>
+                        </div>
+                        <div class="col-lg-3 col-md-3 col-sm-6 col-6 unreedemable">
+                            <img class="imgacct" src="images/five-dollars-off.png">
+                            <h6>$5 OFF</h6>
+                            <p>600 points</p>
+                            <button class="actionbutton">More points needed</button>
+                        </div>
+                        <div class="col-lg-3 col-md-3 col-sm-6 col-6 unreedemable">
+                            <img class="imgacct" src="images/ten-dollars-off.png">
+                            <h6>$10 OFF</h6>
+                            <p>1000 points</p>
+                            <button class="actionbutton">More points needed</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- points history tab -->
+            <div id="pointshistory" class="tabacctcontent">
+                <div class="acctrect-right">
+                    <div class="row">
+                        <div class="col-md-6">
+                            <h6>Welcome Points!</h6>
+                            <p>11 November 2023</p>
+                        </div>
+                        <div class="col-md-6">
+                            <h6 class="text-end">+150</h6>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!--web footer-->
+    <div class="web-footer">
+        <div class="row-footer">
+            <div class="row">
+                <div class="col-md-2">
+                    <a href="index.html"><img class="kacaang-logo" src="images/logo.png"></a>
+                </div>
+                <div class="col-md-2 offset-md-1">
+                    <a class="footer-link" href="shop.html">SHOP</a> <br>
+                    <a class="footer-link" href="shop.html">SALES</a> <br>
+                    <a class="footer-link" href="corporate.html">OCCASIONS</a> <br>
+                    <a class="footer-link" href="corporate.html">CORPORATE</a> <br>
+                    <a class="footer-link" href="faqs.html">FAQS</a>
+                </div>
+                <div class="col-md-3 offset-md-1">
+                    <a class="footer-link" href="about-us.html">OUR STORY</a> <br>
+                    <a class="footer-link" href="farm.html">OUR FARM</a> <br>
+                    <a class="footer-link" href="account.html">CASHEW CRAZE CLUB</a> <br>
+                    <a class="footer-link" href="contact-us.html">CONTACT US</a> <br>
+                    <div class="icons">
+                        <a href="#"><i class="fa-brands fa-x-twitter"></i></a>
+                        <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                        <a href="#"><i class="fa-brands fa-facebook"></i></a>
+                        <a href="#"><i class="fa-brands fa-tiktok"></i></a>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <a class="footer-link" href="#">PRIVACY POLICY</a> <br>
+                    <a class="footer-link" href="#">TERMS AND CONDITIONS</a> <br>
+                </div>
+            </div>
+            <div class="copyright">
+                <p class="copyright">COPYRIGHT &copy; 2023 KACAANG. ALL RIGHTS RESERVED.</p>
+            </div>
+        </div>
+        <img src="images/nuts-banner.png" style="width: 100%;">
+    </div>
+    <!--mobile footer-->
+    <div class="mobile-footer">
+        <div class="row-footer">
+            <a href="index.html"><img class="kacaang-logo" src="images/logo.png">
+            <div class="mobile-footer-links">
+                <a class="mobile-footer-links" href="shop.html">SHOP</a> <br>
+                <a class="mobile-footer-links" href="shop.html">PROMOTIONS</a> <br>
+                <a class="mobile-footer-links" href="corporate.html">OCCASIONS</a> <br>
+                <a class="mobile-footer-links" href="corporate.html">CORPORATE</a> <br>
+                <a class="mobile-footer-links" href="faqs.html">FAQS</a> <br>
+                <a class="mobile-footer-links" href="about-us.html">OUR STORY</a> <br>
+                <a class="mobile-footer-links" href="farm.html">OUR FARM</a> <br>
+                <a class="mobile-footer-links" href="account.html">CASHEW CRAZE CLUB</a> <br>
+                <a class="mobile-footer-links" href="contact-us.html">CONTACT US</a> <br>
+                <div class="icons">
+                    <a href="#"><i class="fa-brands fa-x-twitter"></i></a>
+                    <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                    <a href="#"><i class="fa-brands fa-facebook"></i></a>
+                    <a href="#"><i class="fa-brands fa-tiktok"></i></a>
+                </div>
+            </div>
+            <div class="privacy-tandc">
+                <a class="mobile-footer-links" href="#">PRIVACY POLICY</a> <br>
+                <a class="mobile-footer-links" href="#">TERMS AND CONDITIONS</a>
+            </div>
+            <div class="copyright">
+                <p class="copyright">COPYRIGHT &copy; 2023 KACAANG. ALL RIGHTS RESERVED.</p>
+            </div>
+        </div>
+        <img src="images/nuts-banner.png" style="width: 100%;">
+    </div>
+</body>
+
+</html>
